library/src/libqcolor.h

typedef struct QColor QColor;
QTLIBC_API void QColor_GetCmykF5(const QColor* self, float* c, float* m, float* y, float* k, float* a);
QTLIBC_API void QColor_SetCmykF5(QColor* self, float c, float m, float y, float k, float a);
QTLIBC_API void QColor_GetHsl4(const QColor* self, int* h, int* s, int* l, int* a);
QTLIBC_API void QColor_SetHsl4(QColor* self, int h, int s, int l, int a);
QTLIBC_API void QColor_GetHslF4(const QColor* self, float* h, float* s, float* l, float* a);
QTLIBC_API void QColor_SetHslF4(QColor* self, float h, float s, float l, float a);
QTLIBC_API QColor* QColor_FromRgb4(int r, int g, int b, int a);
QTLIBC_API QColor* QColor_FromRgbF4(float r, float g, float b, float a);
QTLIBC_API QColor* QColor_FromRgba644(uint16_t r, uint16_t g, uint16_t b, uint16_t a);
QTLIBC_API QColor* QColor_FromHsv4(int h, int s, int v, int a);
QTLIBC_API QColor* QColor_FromHsvF4(float h, float s, float v, float a);
QTLIBC_API QColor* QColor_FromCmyk5(int c, int m, int y, int k, int a);
QTLIBC_API QColor* QColor_FromCmykF5(float c, float m, float y, float k, float a);
QTLIBC_API QColor* QColor_FromHsl4(int h, int s, int l, int a);
QTLIBC_API QColor* QColor_FromHslF4(float h, float s, float l, float a);
QTLIBC_API QColor* QColor_Lighter1(const QColor* self, int f);
QTLIBC_API QColor* QColor_Darker1(const QColor* self, int f);
QTLIBC_API void QColor_Delete(QColor* self);