src/qt/libqcolor.bf

	[LinkName("QColor_GetCmykF5")]
	public static extern void QColor_GetCmykF5(void* c_this, float* c, float* m, float* y, float* k, float* a);
	[LinkName("QColor_SetCmykF5")]
	public static extern void QColor_SetCmykF5(void* c_this, float c, float m, float y, float k, float a);
	[LinkName("QColor_GetHsl4")]
	public static extern void QColor_GetHsl4(void* c_this, int32* h, int32* s, int32* l, int32* a);
	[LinkName("QColor_SetHsl4")]
	public static extern void QColor_SetHsl4(void* c_this, int32 h, int32 s, int32 l, int32 a);
	[LinkName("QColor_GetHslF4")]
	public static extern void QColor_GetHslF4(void* c_this, float* h, float* s, float* l, float* a);
	[LinkName("QColor_SetHslF4")]
	public static extern void QColor_SetHslF4(void* c_this, float h, float s, float l, float a);
	[LinkName("QColor_FromRgb4")]
	public static extern void QColor_FromRgb4(int32 r, int32 g, int32 b, int32 a);
	[LinkName("QColor_FromRgbF4")]
	public static extern void QColor_FromRgbF4(float r, float g, float b, float a);
	[LinkName("QColor_FromRgba644")]
	public static extern void QColor_FromRgba644(uint16 r, uint16 g, uint16 b, uint16 a);
	[LinkName("QColor_FromHsv4")]
	public static extern void QColor_FromHsv4(int32 h, int32 s, int32 v, int32 a);
	[LinkName("QColor_FromHsvF4")]
	public static extern void QColor_FromHsvF4(float h, float s, float v, float a);
	[LinkName("QColor_FromCmyk5")]
	public static extern void QColor_FromCmyk5(int32 c, int32 m, int32 y, int32 k, int32 a);
	[LinkName("QColor_FromCmykF5")]
	public static extern void QColor_FromCmykF5(float c, float m, float y, float k, float a);
	[LinkName("QColor_FromHsl4")]
	public static extern void QColor_FromHsl4(int32 h, int32 s, int32 l, int32 a);
	[LinkName("QColor_FromHslF4")]
	public static extern void QColor_FromHslF4(float h, float s, float l, float a);
	[LinkName("QColor_Lighter1")]
	public static extern void QColor_Lighter1(void* c_this, int32 f);
	[LinkName("QColor_Darker1")]
	public static extern void QColor_Darker1(void* c_this, int32 f);
	/// Delete this object from C++ memory
	[LinkName("QColor_Delete")]
	public static extern void QColor_Delete(void* self);
}